# BootcampPython

./: Exercicio1.py  Exercicio3.py  README.md  main.py
Aula01/: main.py
Aula03/: Desafio.py  Exercicio2.py  Exercicio3.py  Exercicio4.py
Aula04/: Exercicios.py
Aula05/: ExerciciosFuncoes.py  dados.csv  exercicio.py  exercicios.py  teste.py
Aula06/: .flake8  .pre-commit-config.yaml  main.py  main2.py  pyproject.toml  test.py
Aula17/: main.py  pyproject.toml
